# gpufl-client

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.demo  Dockerfile.monitor  Dockerfile.monitor.amd  Dockerfile.monitor.supervisord.conf  README.md  THIRD-PARTY-NOTICES.txt  build-ubuntu.sh  build-windows.ps1  build.sh  docker-compose.monitor.amd.yml  docker-compose.monitor.yml  pyproject.toml  run_tests.py
.github/: pull_request_template.md
.github/workflows/: build.yml  release.yml
benchmark/: README.md  cuda_gemm.py  profile_pytorch_kernels.py  profile_pytorch_via_gpufl.py  pytorch_train.py  run_benchmark.py
daemon/: README.md
daemon/launcher/: CMakeLists.txt  agent_launcher.cpp  agent_launcher.hpp  cli_parse.cpp  cli_parse.hpp  main.cpp  monitor_command.cpp  monitor_command.hpp  trace_command.cpp  trace_command.hpp  trace_command_common.cpp  trace_command_common.hpp  trace_command_win.cpp  upload_command.cpp  upload_command.hpp
daemon/monitor/: CMakeLists.txt  main.cpp  monitor_runner.cpp  monitor_runner.hpp
docs/compatibility/: nvidia-deep-mode-matrix.md
example/amd/: CMakeLists.txt  README.md  check_device.cpp  gpufl_scope_demo.cpp  vector_add_benchmark.cpp
example/cuda/: CMakeLists.txt  block_style_example.cu  check_conflict.cu  cupti_basic.cu  cupti_pc_sampling.cu  deep_deadlock_repro.cu  list_sass_metrics.cu  manykernel_benchmark.cu  memory_coalescing_demo.cu  multi_engine_demo.cu  occupancy_demo.cu  sass_divergence_demo.cu  system_monitor.cu  test_occupancy.cu  test_sass_cubin.cu  test_sass_metrics.cu  vector_add_benchmark.cu
example/cuda/programming_massively_parallel/: exercises3_1.cu
example/python/: 02_numba_cuda.py  03_kernel.launch.py  03_pytorch_benchmark.py
example/python/analyzer/: 01_analyzer_sample.py
example/python/docker/: Dockerfile  Dockerfile.local  sample_code.py
include/gpufl/: gpufl.hpp
include/gpufl/backends/: host_collector.hpp
include/gpufl/backends/amd/: hip_static_collector.cpp  hip_static_collector.hpp  monitor_adapter_amd.cpp  monitor_adapter_amd.hpp  rocm_collector.cpp  rocm_collector.hpp  rocprofiler_backend.cpp  rocprofiler_backend.hpp
include/gpufl/backends/nvidia/: capture_capability_resolver.cpp  capture_capability_resolver.hpp  cuda_cleanup_handler.cpp  cuda_cleanup_handler.hpp  cuda_collector.cpp  cuda_collector.hpp  cuda_feature_guards.hpp  cupti_activity_callbacks.cpp  cupti_activity_state.cpp  cupti_activity_state.hpp  cupti_backend.cpp  cupti_backend.hpp  cupti_capture_capabilities.cpp  cupti_common.hpp  cupti_engine_selection.cpp  cupti_engine_selection.hpp  cupti_handlers.cpp  cupti_handlers.hpp  cupti_runtime_support.cpp  cupti_runtime_support.hpp  cupti_utils.cpp  cupti_utils.hpp  kernel_launch_handler.cpp  kernel_launch_handler.hpp  mem_transfer_handler.cpp  mem_transfer_handler.hpp  monitor_adapter_nvidia.cpp  monitor_adapter_nvidia.hpp  nvml_collector.cpp  nvml_collector.hpp  profiling_plan.hpp  resource_handler.cpp  resource_handler.hpp  synchronization_handler.cpp  synchronization_handler.hpp
include/gpufl/core/: activity_record.hpp  backend_factory.cpp  backend_factory.hpp  backend_interfaces.hpp  batch_buffer.hpp  common.cpp  common.hpp  config_file_loader.cpp  config_file_loader.hpp  debug_logger.cpp  debug_logger.hpp  dictionary_manager.cpp  dictionary_manager.hpp  env_vars.hpp  events.hpp  gpufl.cpp  host_info.cpp  host_info.hpp  itanium_demangle.cpp  itanium_demangle.hpp  logger.cpp  logger.hpp  monitor.cpp  monitor.hpp  monitor_adapter.cpp  monitor_adapter.hpp  monitor_backend.hpp  monitor_batch_manager.cpp  monitor_batch_manager.hpp  monitor_record_builders.cpp  monitor_record_builders.hpp  remote_config.cpp  remote_config.hpp  ring_buffer.hpp  runtime.cpp  runtime.hpp  sampler.cpp  sampler.hpp  sass_compressor.cpp  sass_compressor.hpp  (+9 more)
include/gpufl/core/json/: json.cpp  json.hpp
include/gpufl/core/logger/: file_compressor.cpp  file_compressor.hpp  file_log_sink.cpp  file_log_sink.hpp  http_log_sink.cpp  http_log_sink.hpp  log_rotator.cpp  log_rotator.hpp  log_salvage.cpp  logger.cpp  (+3 more)
include/gpufl/cuda/: cuda.cpp  cuda.hpp  cupti_backend.cpp  cupti_backend.hpp  launch.hpp  monitor.cpp
include/gpufl/inject/: inject_entry.cpp  inject_entry.hpp
include/gpufl/report/: hint_engine.cpp  hint_engine.hpp  json_reader.cpp  json_reader.hpp  text_report.cpp  text_report.hpp
include/gpufl/upload/: upload_logs.cpp  upload_logs.hpp
include/gpumon/core/: monitor.hpp
python/: bindings.cpp
python/gpufl/: __init__.py  _targeting.py  cli.py  utils.py
python/gpufl/analyzer/: analyzer.py
python/gpufl/cupy/: __init__.py
python/gpufl/jax/: __init__.py
python/gpufl/numba/: __init__.py
python/gpufl/report/: __init__.py  text_report.py
python/gpufl/torch/: __init__.py  dispatch.py  profile.py  stack.py  trace_import.py
python/gpufl/triton/: __init__.py
python/gpufl/viz/: reader.py  timeline.py  visualizer.py
scripts/: docker-demo-loop.sh
scripts/install/: common.sh  install-linux-amd.sh  install-linux-nvidia.sh  install-linux.sh
scripts/windows/: run-monitor-local.bat  run_capability_matrix.ps1  run_multi_engine_matrix.ps1
tests/: CMakeLists.txt  run_engine_coverage.ps1  run_engine_coverage.sh  verify_pipeline.py
tests/backends/amd/: test_hip_static_collector.cpp  test_rocm_collector.cpp
tests/backends/nvidia/: test_capture_capability_resolver.cpp  test_cuda_collector.cpp  test_engine_coverage.cpp  test_nvidia_backend.cpp  test_nvml_collector.cpp
tests/common/: log_utils.cpp  log_utils.hpp  test_kernel.cu  test_kernel.hpp  test_utils.hpp
tests/core/: test_analyzer.cpp  test_api_path_routing.cpp  test_batch_models.cpp  test_bench_invoker.cpp  test_disabled.cpp  test_http_log_sink.cpp  test_itanium_demangle.cpp  test_monitor.cpp  test_sampler.cpp  test_wire_contract.cpp
tests/launcher/: test_cli_parse.cpp
tests/python/: conftest.py  test_analyzer.py  test_bindings.py  test_continuous_system_sampling.py  test_disabled.py  test_remote_upload_smoke.py  test_scope_iterable.py
tests/upload/: test_upload_logs.cpp
(+43 files in other folders)
